--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi>=0.120.4",
     "fastmcp>=2.13.0.2",
     "ipykernel>=7.1.0",
     "langchain[google-genai]>=1.0.3",
     "langgraph>=1.0.2",
     "python-dotenv>=1.2.1",
+    "uvicorn>=0.38.0",
 ]
