--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ipykernel>=7.1.0",
     "langchain[google-genai]>=1.0.3",
     "langgraph>=1.0.2",
+    "langgraph-cli[inmem]>=0.4.6",
     "python-dotenv>=1.2.1",
     "uvicorn>=0.38.0",
 ]
