--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,11 @@ dependencies = [
     "fastapi>=0.120.4",
     "fastmcp>=2.13.0.2",
     "ipykernel>=7.1.0",
+    "langchain-mcp-adapters>=0.1.12",
     "langchain[google-genai]>=1.0.3",
     "langgraph>=1.0.2",
     "langgraph-cli[inmem]>=0.4.6",
     "python-dotenv>=1.2.1",
     "uvicorn>=0.38.0",
+    "wrapt>=2.0.0",
 ]
